--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ text-align: center;
       <h2 class="regular"id="WEB-Tools">Web Development Tools</h2>
         <h6>Posted on 04.02.2023</h6>
         
-        <p>This was the fifth unit and here we learned how to use "Inspect Element" on any website to explore the HTML bejind it and also the CSS properties. Also in this unit I was able to create an account with github.com and create my own domain to post this Blog or any other project I create. This was a short but very informative and interesting Lesson. </p>
+        <p>This was the fifth unit and here we learned how to use "Inspect Element" on any website to explore the HTML behind it and also the CSS properties. Also in this unit I was able to create an account with github.com and create my own domain to post this Blog or any other project I create. This was a short but very informative and interesting Lesson. </p>
         
     </body>
 </html>
