--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         body {background-color:lightblue;}
     h1{color: blue;
 font-family: “Helvetica”, sans-serif;
-font-size: 60px;
+font-size: 70px;
 line-height: 20px;
 font-style: italic;
 text-align: center;
@@ -24,7 +24,7 @@ text-align: center;
         
     }
     .regular {
-            color: red;
+            color:rgb(214,28,20);
             font-family: elephant;
             font-size: 30px;
             font-style: italic;
