--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ text-align: center;
         
     }
     .regular {
-            color:rgb(214,28,20);
+            color:rgb(214,30,80);
             font-family: elephant;
             font-size: 30px;
             font-style: italic;
@@ -43,7 +43,7 @@ text-align: center;
           #content {
             border-style:groove;
             border-width:5px;
-            border-color:orange;
+            border-color:grey;
             padding:5px;
             margin:20px
             
