--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ text-align: center;
             display:block;
             margin-right:auto;
             margin-left:auto;
-            width:60%;
+            width:75%;
             border:2px dotted green;
             padding:1px;
             
@@ -45,7 +45,10 @@ text-align: center;
             border-width:5px;
             border-color:grey;
             padding:5px;
-            margin:20px
+            margin:20px;
+            width:50%;
+            margin-right:auto;
+            margin-left:auto;
             
           }
         </style> </head>
