--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ text-align: center;
             margin-right:auto;
             margin-left:auto;
             width:75%;
+            height: 225px;
             border:2px dotted green;
             padding:1px;
             
